# enki

./: LICENSE  README.md  common.h  core.c  core.h  graphics.c  graphics.h  main.c  meson.build  object.c  object.h  tilemap.c  tilemap.h  window.c  window.h
assets/: README.md
cmd/: enki-example.c  enki-texture-info.c  pong.c
enki/: core.c  core.h  graphics.c  graphics.h  level.c  level.h  object.c  object.h  sound.c  sound.h  state.h  tilemap.c  tilemap.h  window.c
tests/: level_tests.c  test.h  tilemap_tests.c
